Fix jumpy page when open/closing picker

--- a/src/index.scss
+++ b/src/index.scss
@@ -53,7 +53,7 @@ input.form-control {
 }
 
 .popover {
-	position: absolute;
+	position: fixed !important;
 	z-index: 2;
 
 	.cover {
